--- a/0x02-CSS_advanced/images/2-style.css
+++ b/0x02-CSS_advanced/images/2-style.css
@@ -20,4 +20,5 @@ a {
 
 /* Set foreground color for elements with the section-tagline class */
 .section-tagline {
-    color: #D73953}
+    color: #D73953;
+}
