--- a/0x02-CSS_advanced/images/2-style.css
+++ b/0x02-CSS_advanced/images/2-style.css
@@ -1,24 +1,25 @@
-/* Set body foreground color */
+/* add colors */
+
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     color: #161616;
 }
 
-/* Set anchor element foreground color */
 a {
     color: #161616;
 }
 
-/* Hide elements with visually-hidden class */
 .visually-hidden {
     display: none;
 }
 
-/* Set foreground for elements with the card-category class */
 .card-category {
     color: #D73953;
 }
 
-/* Set foreground color for elements with the section-tagline class */
 .section-tagline {
     color: #D73953;
 }
