--- a/0x02-CSS_advanced/images/2-style.css
+++ b/0x02-CSS_advanced/images/2-style.css
@@ -1,25 +1,29 @@
-/* add colors */
-
+/* Add smooth scrolling to the entire HTML document */
 html {
     scroll-behavior: smooth;
 }
 
+/* Set body foreground color */
 body {
-    color: #161616;
+  color: #161616;
 }
 
+/* Set anchor element foreground color */
 a {
-    color: #161616;
+  color: #161616;
 }
 
+/* Hide elements with visually-hidden class */
 .visually-hidden {
-    display: none;
+  display: none;
 }
 
+/* Set foreground color for elements with the card-category class */
 .card-category {
-    color: #D73953;
+  color: #D73953;
 }
 
+/* Set foreground color for elements with the section-tagline class */
 .section-tagline {
-    color: #D73953;
+  color: #D73953;
 }
